objects/GL_Code__c/GL_Code__c.object-meta.xml
<CustomObject>
    <description>GL Codes are used to build line items on our Job Cost Layouts.  The Job Cost Layouts are the Quote, Estimate, Purchase Order, and Vendor Invoice.   The line items on each of these follow similar logic.</description>
    <label>GL Code</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>