objects/GL_Code__c/fields/GL_Department__c.field-meta.xml
<CustomField>
    <fullName>GL_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Department</label>
    <referenceTo>GL_Department__c</referenceTo>
    <relationshipLabel>GL Codes</relationshipLabel>
    <relationshipName>GL_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>