objects/GL_Code__c/fields/GL_ID__c.field-meta.xml
<CustomField>
    <fullName>GL_ID__c</fullName>
    <description>This is GL ID field. These id&apos;s are auto generated.</description>
    <label>GL Code</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>