objects/GL_Code__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>