objects/GL_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>GL_ID__c</columns>
    <columns>NAME</columns>
    <columns>GL_Department__c</columns>
    <columns>Unit_Cost__c</columns>
    <columns>Unit_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>